fix: 修复移动端记录当前文档浏览位置问题 | Fix the issue of recording the current document position on mobile devices.

--- a/style/module/custom-location.css
+++ b/style/module/custom-location.css
@@ -10,7 +10,8 @@
     border: 1px solid var(--b3-theme-primary);
     position: absolute;
     top: 2rem;
-    right: 1.5rem;
+    right: 2rem;
+    z-index: 1;
 }
 
 /* 强制显示块滚动条 */
